// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SwitchButton > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-2[data-size='small'] {
  height: 2.5rem;
}

.emotion-2[data-size='medium'] {
  height: 3rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-5[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-5[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-5[data-image="illustration"] {
  padding: 0rem;
}

.emotion-5[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-5:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-5:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-5:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-5:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-5[data-has-label='true'] .emotion-8,
.emotion-5[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-5:hover,
.emotion-5:active {
  box-shadow: none;
  border: none;
}

.emotion-5:hover:not([data-error='true'][data-disabled='true']),
.emotion-5:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-5[data-checked='true'] {
  border: none;
}

.emotion-5 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-5[data-checked='true'] label {
  color: #ffffff;
}

.emotion-5:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-10[aria-disabled='false'],
.emotion-10[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 {
  fill: #8c40ef;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 .emotion-17 {
  fill: #e5dbfd;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffd3e3;
}

.emotion-10[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-10[aria-disabled='true']>label,
.emotion-10[aria-disabled='true'] .emotion-13 {
  cursor: not-allowed;
}

.emotion-10[aria-disabled='true'] .emotion-15 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-10[aria-disabled='true'] .emotion-15 .emotion-17 {
  fill: #f3f3f4;
}

.emotion-10[data-checked='true'] {
  color: #641cb3;
}

.emotion-10[data-error='true'] {
  color: #b3144d;
}

.emotion-10[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-10 input+svg {
  display: none;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13+.emotion-15 {
  fill: #d9dadd;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 {
  fill: #8c40ef;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10 .emotion-13[aria-disabled='false']:active+.emotion-15 {
  background: none;
  fill: #8c40ef;
}

.emotion-10 .emotion-13[aria-disabled='false']:active+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-12 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-12+.emotion-15 .emotion-19 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-12:checked+svg .emotion-19 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-12:checked[aria-disabled='false'][aria-invalid='false']+.emotion-15 {
  fill: #8c40ef;
}

.emotion-12:checked[aria-disabled='true'][aria-invalid='false']+.emotion-15 {
  fill: #d8c5fc;
}

.emotion-12[aria-invalid='true']:not([aria-disabled='true'])+.emotion-15 {
  fill: #e51963;
}

.emotion-12[aria-disabled='false']:active+.emotion-15 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-12[aria-disabled='false']:active+.emotion-15 .emotion-17 {
  fill: #f1eefc;
}

.emotion-12[aria-disabled='false']:focus-visible+.emotion-15 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-12[aria-invalid='true']:focus+.emotion-15 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-12[aria-invalid='true']:focus+.emotion-15 .emotion-17 {
  fill: #ffebf2;
}

.emotion-14 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-14 .emotion-17 {
  fill: #ffffff;
}

.emotion-21 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
        data-size="small"
      >
        <div
          class="emotion-4 emotion-5 emotion-6"
          data-checked="true"
          data-disabled="false"
          data-has-default-cursor="false"
          data-has-label="true"
          data-image="none"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          tabindex="0"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              aria-disabled="false"
              class="emotion-9 emotion-10 emotion-11"
              data-checked="true"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="emotion-12 emotion-13"
                id="«r2»"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="emotion-16 emotion-17"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="emotion-18 emotion-19"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="emotion-20 emotion-21 emotion-22"
                for="«r2»"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="emotion-4 emotion-5 emotion-6"
          data-checked="false"
          data-disabled="false"
          data-has-default-cursor="false"
          data-has-label="true"
          data-image="none"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          tabindex="0"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              aria-disabled="false"
              class="emotion-9 emotion-10 emotion-11"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="emotion-12 emotion-13"
                id="«r6»"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="emotion-16 emotion-17"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="emotion-18 emotion-19"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="emotion-20 emotion-21 emotion-22"
                for="«r6»"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton > renders correctly medium 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-2[data-size='small'] {
  height: 2.5rem;
}

.emotion-2[data-size='medium'] {
  height: 3rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-5[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-5[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-5[data-image="illustration"] {
  padding: 0rem;
}

.emotion-5[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-5:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-5:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-5:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-5:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-5[data-has-label='true'] .emotion-8,
.emotion-5[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-5:hover,
.emotion-5:active {
  box-shadow: none;
  border: none;
}

.emotion-5:hover:not([data-error='true'][data-disabled='true']),
.emotion-5:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-5[data-checked='true'] {
  border: none;
}

.emotion-5 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-5[data-checked='true'] label {
  color: #ffffff;
}

.emotion-5:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-10[aria-disabled='false'],
.emotion-10[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 {
  fill: #8c40ef;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 .emotion-17 {
  fill: #e5dbfd;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffd3e3;
}

.emotion-10[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-10[aria-disabled='true']>label,
.emotion-10[aria-disabled='true'] .emotion-13 {
  cursor: not-allowed;
}

.emotion-10[aria-disabled='true'] .emotion-15 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-10[aria-disabled='true'] .emotion-15 .emotion-17 {
  fill: #f3f3f4;
}

.emotion-10[data-checked='true'] {
  color: #641cb3;
}

.emotion-10[data-error='true'] {
  color: #b3144d;
}

.emotion-10[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-10 input+svg {
  display: none;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13+.emotion-15 {
  fill: #d9dadd;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 {
  fill: #8c40ef;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10 .emotion-13[aria-disabled='false']:active+.emotion-15 {
  background: none;
  fill: #8c40ef;
}

.emotion-10 .emotion-13[aria-disabled='false']:active+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-12 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-12+.emotion-15 .emotion-19 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-12:checked+svg .emotion-19 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-12:checked[aria-disabled='false'][aria-invalid='false']+.emotion-15 {
  fill: #8c40ef;
}

.emotion-12:checked[aria-disabled='true'][aria-invalid='false']+.emotion-15 {
  fill: #d8c5fc;
}

.emotion-12[aria-invalid='true']:not([aria-disabled='true'])+.emotion-15 {
  fill: #e51963;
}

.emotion-12[aria-disabled='false']:active+.emotion-15 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-12[aria-disabled='false']:active+.emotion-15 .emotion-17 {
  fill: #f1eefc;
}

.emotion-12[aria-disabled='false']:focus-visible+.emotion-15 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-12[aria-invalid='true']:focus+.emotion-15 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-12[aria-invalid='true']:focus+.emotion-15 .emotion-17 {
  fill: #ffebf2;
}

.emotion-14 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-14 .emotion-17 {
  fill: #ffffff;
}

.emotion-21 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
        data-size="medium"
      >
        <div
          class="emotion-4 emotion-5 emotion-6"
          data-checked="true"
          data-disabled="false"
          data-has-default-cursor="false"
          data-has-label="true"
          data-image="none"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          tabindex="0"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              aria-disabled="false"
              class="emotion-9 emotion-10 emotion-11"
              data-checked="true"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="emotion-12 emotion-13"
                id="«rb»"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="emotion-16 emotion-17"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="emotion-18 emotion-19"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="emotion-20 emotion-21 emotion-22"
                for="«rb»"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="emotion-4 emotion-5 emotion-6"
          data-checked="false"
          data-disabled="false"
          data-has-default-cursor="false"
          data-has-label="true"
          data-image="none"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          tabindex="0"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              aria-disabled="false"
              class="emotion-9 emotion-10 emotion-11"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="emotion-12 emotion-13"
                id="«rf»"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="emotion-16 emotion-17"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="emotion-18 emotion-19"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="emotion-20 emotion-21 emotion-22"
                for="«rf»"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton > renders correctly with right value 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-2[data-size='small'] {
  height: 2.5rem;
}

.emotion-2[data-size='medium'] {
  height: 3rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-5[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-5[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-5[data-image="illustration"] {
  padding: 0rem;
}

.emotion-5[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-5:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-5:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-5:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-5:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-5[data-has-label='true'] .emotion-8,
.emotion-5[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-5:hover,
.emotion-5:active {
  box-shadow: none;
  border: none;
}

.emotion-5:hover:not([data-error='true'][data-disabled='true']),
.emotion-5:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-5[data-checked='true'] {
  border: none;
}

.emotion-5 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-5[data-checked='true'] label {
  color: #ffffff;
}

.emotion-5:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-10[aria-disabled='false'],
.emotion-10[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 {
  fill: #8c40ef;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 .emotion-17 {
  fill: #e5dbfd;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffd3e3;
}

.emotion-10[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-10[aria-disabled='true']>label,
.emotion-10[aria-disabled='true'] .emotion-13 {
  cursor: not-allowed;
}

.emotion-10[aria-disabled='true'] .emotion-15 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-10[aria-disabled='true'] .emotion-15 .emotion-17 {
  fill: #f3f3f4;
}

.emotion-10[data-checked='true'] {
  color: #641cb3;
}

.emotion-10[data-error='true'] {
  color: #b3144d;
}

.emotion-10[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-10 input+svg {
  display: none;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13+.emotion-15 {
  fill: #d9dadd;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 {
  fill: #8c40ef;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10 .emotion-13[aria-disabled='false']:active+.emotion-15 {
  background: none;
  fill: #8c40ef;
}

.emotion-10 .emotion-13[aria-disabled='false']:active+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-12 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-12+.emotion-15 .emotion-19 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-12:checked+svg .emotion-19 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-12:checked[aria-disabled='false'][aria-invalid='false']+.emotion-15 {
  fill: #8c40ef;
}

.emotion-12:checked[aria-disabled='true'][aria-invalid='false']+.emotion-15 {
  fill: #d8c5fc;
}

.emotion-12[aria-invalid='true']:not([aria-disabled='true'])+.emotion-15 {
  fill: #e51963;
}

.emotion-12[aria-disabled='false']:active+.emotion-15 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-12[aria-disabled='false']:active+.emotion-15 .emotion-17 {
  fill: #f1eefc;
}

.emotion-12[aria-disabled='false']:focus-visible+.emotion-15 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-12[aria-invalid='true']:focus+.emotion-15 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-12[aria-invalid='true']:focus+.emotion-15 .emotion-17 {
  fill: #ffebf2;
}

.emotion-14 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-14 .emotion-17 {
  fill: #ffffff;
}

.emotion-21 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
        data-size="small"
      >
        <div
          class="emotion-4 emotion-5 emotion-6"
          data-checked="false"
          data-disabled="false"
          data-has-default-cursor="false"
          data-has-label="true"
          data-image="none"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          tabindex="0"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              aria-disabled="false"
              class="emotion-9 emotion-10 emotion-11"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="emotion-12 emotion-13"
                id="«rk»"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="emotion-16 emotion-17"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="emotion-18 emotion-19"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="emotion-20 emotion-21 emotion-22"
                for="«rk»"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="emotion-4 emotion-5 emotion-6"
          data-checked="true"
          data-disabled="false"
          data-has-default-cursor="false"
          data-has-label="true"
          data-image="none"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          tabindex="0"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              aria-disabled="false"
              class="emotion-9 emotion-10 emotion-11"
              data-checked="true"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="emotion-12 emotion-13"
                id="«ro»"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="emotion-16 emotion-17"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="emotion-18 emotion-19"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="emotion-20 emotion-21 emotion-22"
                for="«ro»"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton > renders neutral 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-2[data-size='small'] {
  height: 2.5rem;
}

.emotion-2[data-size='medium'] {
  height: 3rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-5[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-5[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-5[data-image="illustration"] {
  padding: 0rem;
}

.emotion-5[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-5:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-5:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-5:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-5:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-5[data-has-label='true'] .emotion-8,
.emotion-5[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-5:hover,
.emotion-5:active {
  box-shadow: none;
  border: none;
}

.emotion-5:hover:not([data-error='true'][data-disabled='true']),
.emotion-5:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-5[data-checked='true'] {
  border: none;
}

.emotion-5 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-5[data-checked='true'] label {
  color: #222638;
}

.emotion-5:not([data-checked='true']) label:hover {
  color: #222638;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-10[aria-disabled='false'],
.emotion-10[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 {
  fill: #8c40ef;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 .emotion-17 {
  fill: #e5dbfd;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffd3e3;
}

.emotion-10[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-10[aria-disabled='true']>label,
.emotion-10[aria-disabled='true'] .emotion-13 {
  cursor: not-allowed;
}

.emotion-10[aria-disabled='true'] .emotion-15 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-10[aria-disabled='true'] .emotion-15 .emotion-17 {
  fill: #f3f3f4;
}

.emotion-10[data-checked='true'] {
  color: #641cb3;
}

.emotion-10[data-error='true'] {
  color: #b3144d;
}

.emotion-10[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-10 input+svg {
  display: none;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13+.emotion-15 {
  fill: #d9dadd;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false']:not([data-checked='true']) .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 {
  fill: #8c40ef;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 {
  fill: #b3144d;
}

.emotion-10:hover[aria-disabled='false'] .emotion-13[aria-invalid='true']+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-10 .emotion-13[aria-disabled='false']:active+.emotion-15 {
  background: none;
  fill: #8c40ef;
}

.emotion-10 .emotion-13[aria-disabled='false']:active+.emotion-15 .emotion-17 {
  fill: #ffffff;
}

.emotion-12 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-12+.emotion-15 .emotion-19 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-12:checked+svg .emotion-19 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-12:checked[aria-disabled='false'][aria-invalid='false']+.emotion-15 {
  fill: #8c40ef;
}

.emotion-12:checked[aria-disabled='true'][aria-invalid='false']+.emotion-15 {
  fill: #d8c5fc;
}

.emotion-12[aria-invalid='true']:not([aria-disabled='true'])+.emotion-15 {
  fill: #e51963;
}

.emotion-12[aria-disabled='false']:active+.emotion-15 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-12[aria-disabled='false']:active+.emotion-15 .emotion-17 {
  fill: #f1eefc;
}

.emotion-12[aria-disabled='false']:focus-visible+.emotion-15 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-12[aria-invalid='true']:focus+.emotion-15 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-12[aria-invalid='true']:focus+.emotion-15 .emotion-17 {
  fill: #ffebf2;
}

.emotion-14 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-14 .emotion-17 {
  fill: #ffffff;
}

.emotion-21 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
        data-size="small"
      >
        <div
          class="emotion-4 emotion-5 emotion-6"
          data-checked="true"
          data-disabled="false"
          data-has-default-cursor="false"
          data-has-label="true"
          data-image="none"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          tabindex="0"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              aria-disabled="false"
              class="emotion-9 emotion-10 emotion-11"
              data-checked="true"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="emotion-12 emotion-13"
                id="«r1f»"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="emotion-16 emotion-17"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="emotion-18 emotion-19"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="emotion-20 emotion-21 emotion-22"
                for="«r1f»"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="emotion-4 emotion-5 emotion-6"
          data-checked="false"
          data-disabled="false"
          data-has-default-cursor="false"
          data-has-label="true"
          data-image="none"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          tabindex="0"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              aria-disabled="false"
              class="emotion-9 emotion-10 emotion-11"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="emotion-12 emotion-13"
                id="«r1j»"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="emotion-16 emotion-17"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="emotion-18 emotion-19"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="emotion-20 emotion-21 emotion-22"
                for="«r1j»"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton > renders with disabled and tooltip on SwitchButton.Option 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-4[data-size='small'] {
  height: 2.5rem;
}

.emotion-4[data-size='medium'] {
  height: 3rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-11[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-11[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-11[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-11[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-11[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-11[data-image="illustration"] {
  padding: 0rem;
}

.emotion-11[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-11:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-11:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-11[data-has-label='true'] .emotion-14,
.emotion-11[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-11:hover,
.emotion-11:active {
  box-shadow: none;
  border: none;
}

.emotion-11:hover:not([data-error='true'][data-disabled='true']),
.emotion-11:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-11[data-checked='true'] {
  border: none;
}

.emotion-11 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-11[data-checked='true'] label {
  color: #ffffff;
}

.emotion-11:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.emotion-11[data-disabled='true'] {
  background: transparent;
  border: none;
}

.emotion-11 label {
  color: #b5b7bd;
}

.emotion-11:not([data-checked='true']) label:hover {
  background: transparent;
  color: #b5b7bd;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-16[aria-disabled='false'],
.emotion-16[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 {
  fill: #8c40ef;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 .emotion-23 {
  fill: #e5dbfd;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffd3e3;
}

.emotion-16[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-16[aria-disabled='true']>label,
.emotion-16[aria-disabled='true'] .emotion-19 {
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 .emotion-23 {
  fill: #f3f3f4;
}

.emotion-16[data-checked='true'] {
  color: #641cb3;
}

.emotion-16[data-error='true'] {
  color: #b3144d;
}

.emotion-16[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-16 input+svg {
  display: none;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19+.emotion-21 {
  fill: #d9dadd;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 {
  fill: #8c40ef;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16 .emotion-19[aria-disabled='false']:active+.emotion-21 {
  background: none;
  fill: #8c40ef;
}

.emotion-16 .emotion-19[aria-disabled='false']:active+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-18 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-18+.emotion-21 .emotion-25 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-18:checked+svg .emotion-25 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-18:checked[aria-disabled='false'][aria-invalid='false']+.emotion-21 {
  fill: #8c40ef;
}

.emotion-18:checked[aria-disabled='true'][aria-invalid='false']+.emotion-21 {
  fill: #d8c5fc;
}

.emotion-18[aria-invalid='true']:not([aria-disabled='true'])+.emotion-21 {
  fill: #e51963;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 .emotion-23 {
  fill: #f1eefc;
}

.emotion-18[aria-disabled='false']:focus-visible+.emotion-21 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 .emotion-23 {
  fill: #ffebf2;
}

.emotion-20 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-20 .emotion-23 {
  fill: #ffffff;
}

.emotion-27 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-30[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-30[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-30[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-30[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-30[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-30[data-image="illustration"] {
  padding: 0rem;
}

.emotion-30[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-30:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-30:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-30:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-30:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-30[data-has-label='true'] .emotion-14,
.emotion-30[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-30:hover,
.emotion-30:active {
  box-shadow: none;
  border: none;
}

.emotion-30:hover:not([data-error='true'][data-disabled='true']),
.emotion-30:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-30[data-checked='true'] {
  border: none;
}

.emotion-30 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-30[data-checked='true'] label {
  color: #ffffff;
}

.emotion-30:not([data-checked='true']) label:hover {
  color: #641cb3;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="«r14»"
      aria-describedby="«r14»"
      class="emotion-0 emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          data-size="small"
        >
          <div
            class="emotion-6 emotion-3"
          >
            <div
              aria-controls="«r15»"
              aria-describedby="«r15»"
              class="emotion-0 emotion-1"
              data-container-full-height="true"
              tabindex="0"
            >
              <div
                class="emotion-10 emotion-11 emotion-12"
                data-checked="true"
                data-disabled="true"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-testid="switch-button-left"
                data-type="radio"
                role="button"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  <div
                    aria-disabled="true"
                    class="emotion-15 emotion-16 emotion-17"
                    data-checked="true"
                  >
                    <input
                      aria-disabled="true"
                      aria-invalid="false"
                      checked=""
                      class="emotion-18 emotion-19"
                      disabled=""
                      id="«r16»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="left"
                    />
                    <svg
                      class="emotion-20 emotion-21"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="emotion-22 emotion-23"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="emotion-24 emotion-25"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="emotion-26 emotion-27 emotion-28"
                      for="«r16»"
                    >
                      Left
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-10 emotion-30 emotion-12"
            data-checked="false"
            data-disabled="false"
            data-has-default-cursor="false"
            data-has-label="true"
            data-image="none"
            data-testid="switch-button-right"
            data-type="radio"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-13 emotion-14"
            >
              <div
                aria-disabled="false"
                class="emotion-15 emotion-16 emotion-17"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-18 emotion-19"
                  id="«r1a»"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="right"
                />
                <svg
                  class="emotion-20 emotion-21"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-22 emotion-23"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-24 emotion-25"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-26 emotion-27 emotion-28"
                  for="«r1a»"
                >
                  Right
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton > renders with icons 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-4[data-size='small'] {
  height: 2.5rem;
}

.emotion-4[data-size='medium'] {
  height: 3rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-7[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-7[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-7[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-7[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-7[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-7[data-image="illustration"] {
  padding: 0rem;
}

.emotion-7[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-7:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-7:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-7:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-7:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-7[data-has-label='true'] .emotion-10,
.emotion-7[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-7:hover,
.emotion-7:active {
  box-shadow: none;
  border: none;
}

.emotion-7:hover:not([data-error='true'][data-disabled='true']),
.emotion-7:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-7[data-checked='true'] {
  border: none;
}

.emotion-7 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-7[data-checked='true'] label {
  color: #ffffff;
}

.emotion-7:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-12[aria-disabled='false'],
.emotion-12[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #e5dbfd;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffd3e3;
}

.emotion-12[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12[aria-disabled='true']>label,
.emotion-12[aria-disabled='true'] .emotion-15 {
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 .emotion-19 {
  fill: #f3f3f4;
}

.emotion-12[data-checked='true'] {
  color: #641cb3;
}

.emotion-12[data-error='true'] {
  color: #b3144d;
}

.emotion-12[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-12 input+svg {
  display: none;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15+.emotion-17 {
  fill: #d9dadd;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12 .emotion-15[aria-disabled='false']:active+.emotion-17 {
  background: none;
  fill: #8c40ef;
}

.emotion-12 .emotion-15[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-14 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-14+.emotion-17 .emotion-21 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-14:checked+svg .emotion-21 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-14:checked[aria-disabled='false'][aria-invalid='false']+.emotion-17 {
  fill: #8c40ef;
}

.emotion-14:checked[aria-disabled='true'][aria-invalid='false']+.emotion-17 {
  fill: #d8c5fc;
}

.emotion-14[aria-invalid='true']:not([aria-disabled='true'])+.emotion-17 {
  fill: #e51963;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #f1eefc;
}

.emotion-14[aria-disabled='false']:focus-visible+.emotion-17 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 .emotion-19 {
  fill: #ffebf2;
}

.emotion-16 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-16 .emotion-19 {
  fill: #ffffff;
}

.emotion-22 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.emotion-24 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-24 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="«r1m»"
      aria-describedby="«r1m»"
      class="emotion-0 emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          data-size="small"
        >
          <div
            class="emotion-6 emotion-7 emotion-8"
            data-checked="true"
            data-disabled="false"
            data-has-default-cursor="false"
            data-has-label="true"
            data-image="none"
            data-testid="switch-button-left"
            data-type="radio"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <div
                aria-disabled="false"
                class="emotion-11 emotion-12 emotion-13"
                data-checked="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="emotion-14 emotion-15"
                  id="«r1o»"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="left"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="«r1o»"
                >
                  <svg
                    class="emotion-24 emotion-25"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M14.9543 10.6781C15.1672 10.2014 14.5937 9.79573 14.1149 10.0038C13.3621 10.3309 12.5313 10.5123 11.6581 10.5123C8.25024 10.5123 5.48762 7.74964 5.48762 4.34178C5.48762 3.46865 5.66897 2.63787 5.99605 1.88507C6.20408 1.40628 5.79836 0.832829 5.32171 1.0457C2.77491 2.1831 1 4.73805 1 7.70756C1 11.735 4.26491 14.9999 8.29238 14.9999C11.2619 14.9999 13.8169 13.225 14.9543 10.6781Z"
                    />
                  </svg>
                </label>
              </div>
            </div>
          </div>
          <div
            class="emotion-6 emotion-7 emotion-8"
            data-checked="false"
            data-disabled="false"
            data-has-default-cursor="false"
            data-has-label="true"
            data-image="none"
            data-testid="switch-button-right"
            data-type="radio"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <div
                aria-disabled="false"
                class="emotion-11 emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="«r1r»"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="right"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="«r1r»"
                >
                  <svg
                    class="emotion-24 emotion-25"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M8 1C8.41421 1 8.75 1.33579 8.75 1.75V3.25C8.75 3.66421 8.41421 4 8 4C7.58579 4 7.25 3.66421 7.25 3.25V1.75C7.25 1.33579 7.58579 1 8 1Z"
                    />
                    <path
                      d="M10.5 8C10.5 9.38071 9.38071 10.5 8 10.5C6.61929 10.5 5.5 9.38071 5.5 8C5.5 6.61929 6.61929 5.5 8 5.5C9.38071 5.5 10.5 6.61929 10.5 8Z"
                    />
                    <path
                      d="M12.9498 4.11089C13.2427 3.81799 13.2427 3.34312 12.9498 3.05023C12.6569 2.75733 12.182 2.75733 11.8891 3.05023L10.8284 4.11089C10.5356 4.40378 10.5356 4.87865 10.8284 5.17155C11.1213 5.46444 11.5962 5.46444 11.8891 5.17155L12.9498 4.11089Z"
                    />
                    <path
                      d="M15 8C15 8.41421 14.6642 8.75 14.25 8.75H12.75C12.3358 8.75 12 8.41421 12 8C12 7.58579 12.3358 7.25 12.75 7.25H14.25C14.6642 7.25 15 7.58579 15 8Z"
                    />
                    <path
                      d="M11.8891 12.9498C12.182 13.2427 12.6569 13.2427 12.9498 12.9498C13.2427 12.6569 13.2427 12.182 12.9498 11.8891L11.8891 10.8284C11.5962 10.5356 11.1213 10.5356 10.8285 10.8284C10.5356 11.1213 10.5356 11.5962 10.8285 11.8891L11.8891 12.9498Z"
                    />
                    <path
                      d="M8 12C8.41421 12 8.75 12.3358 8.75 12.75V14.25C8.75 14.6642 8.41421 15 8 15C7.58579 15 7.25 14.6642 7.25 14.25V12.75C7.25 12.3358 7.58579 12 8 12Z"
                    />
                    <path
                      d="M5.17157 11.8891C5.46446 11.5962 5.46446 11.1213 5.17157 10.8284C4.87867 10.5355 4.4038 10.5355 4.11091 10.8284L3.05025 11.8891C2.75735 12.182 2.75735 12.6569 3.05025 12.9497C3.34314 13.2426 3.81801 13.2426 4.11091 12.9497L5.17157 11.8891Z"
                    />
                    <path
                      d="M4 8C4 8.41421 3.66421 8.75 3.25 8.75H1.75C1.33579 8.75 1 8.41421 1 8C1 7.58579 1.33579 7.25 1.75 7.25H3.25C3.66421 7.25 4 7.58579 4 8Z"
                    />
                    <path
                      d="M4.11091 5.17157C4.40381 5.46446 4.87868 5.46446 5.17157 5.17157C5.46447 4.87867 5.46447 4.4038 5.17157 4.11091L4.11091 3.05025C3.81802 2.75735 3.34315 2.75735 3.05025 3.05024C2.75736 3.34314 2.75736 3.81801 3.05025 4.11091L4.11091 5.17157Z"
                    />
                  </svg>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton > renders with tooltip 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-4[data-size='small'] {
  height: 2.5rem;
}

.emotion-4[data-size='medium'] {
  height: 3rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-7[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-7[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-7[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-7[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-7[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-7[data-image="illustration"] {
  padding: 0rem;
}

.emotion-7[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-7:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-7:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-7:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-7:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-7[data-has-label='true'] .emotion-10,
.emotion-7[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-7:hover,
.emotion-7:active {
  box-shadow: none;
  border: none;
}

.emotion-7:hover:not([data-error='true'][data-disabled='true']),
.emotion-7:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-7[data-checked='true'] {
  border: none;
}

.emotion-7 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-7[data-checked='true'] label {
  color: #ffffff;
}

.emotion-7:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-12[aria-disabled='false'],
.emotion-12[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #e5dbfd;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffd3e3;
}

.emotion-12[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12[aria-disabled='true']>label,
.emotion-12[aria-disabled='true'] .emotion-15 {
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 .emotion-19 {
  fill: #f3f3f4;
}

.emotion-12[data-checked='true'] {
  color: #641cb3;
}

.emotion-12[data-error='true'] {
  color: #b3144d;
}

.emotion-12[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-12 input+svg {
  display: none;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15+.emotion-17 {
  fill: #d9dadd;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12 .emotion-15[aria-disabled='false']:active+.emotion-17 {
  background: none;
  fill: #8c40ef;
}

.emotion-12 .emotion-15[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-14 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-14+.emotion-17 .emotion-21 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-14:checked+svg .emotion-21 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-14:checked[aria-disabled='false'][aria-invalid='false']+.emotion-17 {
  fill: #8c40ef;
}

.emotion-14:checked[aria-disabled='true'][aria-invalid='false']+.emotion-17 {
  fill: #d8c5fc;
}

.emotion-14[aria-invalid='true']:not([aria-disabled='true'])+.emotion-17 {
  fill: #e51963;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #f1eefc;
}

.emotion-14[aria-disabled='false']:focus-visible+.emotion-17 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 .emotion-19 {
  fill: #ffebf2;
}

.emotion-16 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-16 .emotion-19 {
  fill: #ffffff;
}

.emotion-23 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="«rr»"
      aria-describedby="«rr»"
      class="emotion-0 emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          data-size="small"
        >
          <div
            class="emotion-6 emotion-7 emotion-8"
            data-checked="true"
            data-disabled="false"
            data-has-default-cursor="false"
            data-has-label="true"
            data-image="none"
            data-testid="switch-button-left"
            data-type="radio"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <div
                aria-disabled="false"
                class="emotion-11 emotion-12 emotion-13"
                data-checked="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="emotion-14 emotion-15"
                  id="«rt»"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="left"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23 emotion-24"
                  for="«rt»"
                >
                  Left
                </label>
              </div>
            </div>
          </div>
          <div
            class="emotion-6 emotion-7 emotion-8"
            data-checked="false"
            data-disabled="false"
            data-has-default-cursor="false"
            data-has-label="true"
            data-image="none"
            data-testid="switch-button-right"
            data-type="radio"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <div
                aria-disabled="false"
                class="emotion-11 emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="«r11»"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="right"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23 emotion-24"
                  for="«r11»"
                >
                  Right
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
